# Data-Management-Study

./: .gitignore  README.md
analysis/: execute_job_first_principles.md  execute_job_implementation.md
config/: config.json  data_policy_config.json  drop_in_transfers.json  site_connections.json  site_topology.json
explore/: README.md  requirements.txt
explore/config/: action_space.yaml  objectives.yaml  settings.yaml
explore/scripts/: emit_drop_in_transfers.py  generate_drop_in_transfers.py  plot_exploration.py  plot_job_staging_times.py  plot_trial_means.py  run_exploration.py  run_per_template_dropins.sh  run_per_template_exploration.py
explore/src/datamgmt_explore/: __init__.py  action_space.py  env.py  metrics.py  policy_builder.py  rl_observations.py  run_store.py  seeds.py  settings.py  sim_runner.py  transfer_summary.py  windowing.py
explore/src/datamgmt_explore/agents/: __init__.py  bandit.py  base.py  bayesian_opt.py  policy_network.py  random_search.py  rl_policy.py
explore/src/datamgmt_explore/objectives/: __init__.py  avg_staging_time.py  base.py  p95_max_staging_reward.py  tail_bulk_staging_cost.py
explore/src/datamgmt_explore/plotting/: __init__.py  experiment_plots.py  job_staging_time_plot.py  method_comparison_live.py  method_timing_live.py  trial_comparison_plots.py  trial_plots.py
input/: mimic_job.csv
output/: events.db
plugin/: CMakeLists.txt
plugin/CMakeModules/: FindSimGrid.cmake
plugin/include/: dispatcher.h  output.h  policy.h  workload_manager.h
plugin/src/: DataManagementPlugin.cpp  dispatcher.cpp  output.cpp  policy.cpp  workload_manager.cpp
scripts/: export_events_to_csv.py  generate_site_connections.py  generate_site_topology.py  plot_drop_in_transfers_timeline.py  plot_transfer_analysis.py  run_dropin_compare.py
